examples/httpbin/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: api7
spec:
  controller: "gateway.apisix.io/api7-ingress-controller"
  parameters:
    apiGroup: "gateway.apisix.io"
    kind: "GatewayProxy"
    name: "api7-proxy-config"
    namespace: "default"
    scope: "Namespace"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api7-ingress
spec:
  ingressClassName: api7
  rules:
  - host: httpbin.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
