examples/httpbin/service-rewrite-host.yaml
apiVersion: gateway.apisix.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: httpbin
spec:
  targetRefs:
  - name: httpbin
    kind: Service
    group: ""
  passHost: rewrite
  upstreamHost: httpbin.example.com
